# task-tracker

./: .gitignore  .pylintrc  main.py  pyproject.toml  retest.py  test.py  tests.py
django_app/: app.py  manage.py
django_app/django_app/: settings.py  urls.py
django_app/task_tracker/: models.py  urls.py  views.py
fastapi_app/: app.py
flask_app/: app.py
flask_app/server/: base.py  database.py  model.py
flask_app/templates/: index.html
flask_app/tests/: conftest.py  test_routes.py  test_task.py
server/: base.py  database.py  model.py
static/: script.js
templates/: django.html  fastapi.html  flask.html  index.html
