[tool.poetry]
name = "app"
version = "0.1.0"
description = "Task Tracker"
authors = ["Sunny Huang"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.7"
jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"
yapf = "^0.32.0"
flask = "^2.2.3"
pytest = "^7.2.2"
coverage = "^7.2.3"
flask-wtf = "^1.1.1"
fastapi-csrf-protect = "^0.2.2"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
